--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,10 @@ sourceSets {
 	}
 }
 
+jar {
+    enabled = false
+}
+
 tasks.withType(JavaCompile) {
     options.compilerArgs << "-parameters"
 }
